kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoso-ship-manager-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contoso-ship-manager-frontend
  template:
    metadata:
      labels:
        app: contoso-ship-manager-frontend
    spec:
      containers:
        - image: Put_Your_Container_Registry_Path
          name: contoso-ship-manager-frontend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /usr/src/app/dist/config.js
              subPath: config.js
      volumes:
        - name: config
          configMap:
            name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: contoso-ship-manager-frontend
spec:
  selector:
    app: contoso-ship-manager-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-ship-manager-frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: Put_url_of_your_frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contoso-ship-manager-frontend
                port:
                  name: http
---
